# yet-another-osint-tool

./: .gitignore  README.md
yet-another-osint-tool/: CMakeLists.txt  main.cpp
yet-another-osint-tool/src/: main.cpp  mainwindow.cpp  settingshandler.cpp
yet-another-osint-tool/src/header/: settingshandler.h
